提交 brower-demo 增加F12 开发者控制台