@@ -1,3 +1,4 @@
-E:\Program Files\java\jdk-13.0.1\bin\java.exe --module-path "E:\Program Files\java\javafx-sdk-13.0.2\lib" --add-modules javafx.controls org.linbo.demo.App
+E:\Program Files\java\jdk-13.0.1\bin\java.exe --module-path "E:\Program Files\java\javafx-sdk-13.0.2\lib" --add-modules javafx.web --add-exports javafx.web/com.sun.javafx.webkit=ALL-UNNAMED org.linbo.demo.App
+
 
 # mvn jfx:native -f ./brower-demo/pom.xml
